---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: ????
  Changes:
    - Add astroponics category even if bioprocessing tab isn't installed
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 2025-06-08
  Changes:
    - Fix biomending recipes changing recycling recipes
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 2025-06-08
  Locale:
    - Add RU locale (credit: onseshigo)
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 2025-04-24
  Minor Features:
    - Add Biomending, which can be used to refresh the spoiling timer for pentapod and biter eggs
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 2025-04-14
  Changes:
    - Exclude source assets from mod portal package
    - Improve migrations code
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2025-04-11
  Changes:
    - Include assets from Krastorio 2 Assets directly into the mod and remove dependencies on asset mods
  Major Features:
    - Add compatibility for Voidcrafting Liquid fertilizer
---------------------------------------------------------------------------------------------------
Version: 1.5.1
  Compatibility:
    - When No Space Platforms is installed, Liquid fertilizer can be crafted anywhere
---------------------------------------------------------------------------------------------------
Version: 1.5.0
  Compatibility:
    - Update compatibility for Wooden Industry, changing dependent technology to Kiln Smelting from Alloy Smelting
---------------------------------------------------------------------------------------------------
Version: 1.4.0
  Changes: