@@ -3,7 +3,7 @@
   "title": "Astroponics",
   "description": "Adds a Space garden for growing wood in space.",
   "author": "SafTheLamb",
-  "version": "1.6.5",
+  "version": "1.7.0",
   "factorio_version": "2.0",
   "homepage": "https://github.com/SafTheLamb/fm-astroponics",
   "package": {
